# LabSound

./: CMakeLists.txt
cmake/: LabSound.cmake
src/core/: AudioBus.cpp  AudioNode.cpp
